--- a/Aplicacao-CNAB/Aplicacao-CNAB/Aplicacao-CNAB.csproj
+++ b/Aplicacao-CNAB/Aplicacao-CNAB/Aplicacao-CNAB.csproj
@@ -45,14 +45,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="CNAB-TabBox.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="CNAB-TabBox.Designer.cs">
+      <DependentUpon>CNAB-TabBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="CNABBL\CNABHeaderBussinessClass.cs" />
+    <Compile Include="CNABBL\Utils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CNAB-TabBox.resx">
+      <DependentUpon>CNAB-TabBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
