--- a/Aplicacao-CNAB/Aplicacao-CNAB/Aplicacao-CNAB.csproj
+++ b/Aplicacao-CNAB/Aplicacao-CNAB/Aplicacao-CNAB.csproj
@@ -12,7 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\RSI\Desktop\</PublishUrl>
+    <PublishUrl>C:\Users\RSI\Desktop\CNAB400\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -24,7 +24,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>Gerador CNAB</ProductName>
     <PublisherName>Niky &amp; Bruno</PublisherName>
-    <ApplicationRevision>3</ApplicationRevision>
+    <ApplicationRevision>5</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
